Bug 1330373 - Capture JSScript::lazyScript field when encoding bytecode incrementally. r=shu